<resources>
    <string name="app_name">Unicar</string>
    <string name="user_login">Código de Aluno (Univali):</string>
    <string name="senha">Senha:</string>
    <string name="SignUpNome">Nome:</string>
    <string name="SignUpEmail">E-mail:</string>
    <string name="LoginNumero">Número</string>
    <string name="SignUpConfirmPassword">Pra ter Certeza:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="when">Quando?</string>
    <string name="profile">Perfil</string>
    <string name="information">Informações</string>
    <string name="data">Dados</string>
    <string name="about">Sobre</string>
    <string name="confirmed_doc">Documentação confirmada</string>
    <string name="car">Carro</string>
    <string name="add_car">Adicionar carro</string>

    <string-array name="how_many_users_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
