<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundLogin">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="@dimen/LoginLayoutMarginLeft">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="90dp"
                android:src="@drawable/logo_unicar_no_bg"
                android:transitionName="imageLogoSplashTransition"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"
                android:transitionName="textCodeTransition"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_codigo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="000-00000"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginLeft="5dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG"
                android:transitionName="CodeTransition">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_codigo_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:inputType="number"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUpNome"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="@dimen/LoginTextViewMarginTop"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_nome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Jeremias da Silva"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginLeft="5dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_nome_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:inputType="text"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUpEmail"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="@dimen/LoginTextViewMarginTop"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="jeremiasdasilva@edu.univali.br"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginLeft="5dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:inputType="text"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoginNumero"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="@dimen/LoginTextViewMarginTop"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_numero"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="(47) 9 9966-6966"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginLeft="5dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_numero_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:inputType="number"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="@dimen/LoginTextViewMarginTop"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"
                android:transitionName="textPassTransition"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                android:layout_marginLeft="5dp"
                android:hint="XXXXXXXX"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG"
                app:passwordToggleEnabled="true"
                android:transitionName="PassTransition">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_senha_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignUpConfirmPassword"
                android:textStyle="bold"
                android:textSize="@dimen/LoginTextViewSize"
                android:layout_marginTop="@dimen/LoginTextViewMarginTop"
                android:layout_marginLeft="@dimen/LoginTextViewMarginLeft"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_confirmar_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginTextInputFieldSize"
                android:layout_marginLeft="5dp"
                android:hint="XXXXXXXX"
                android:textColorHint="@color/LoginTextInputHintBG"
                app:boxBackgroundColor="#d3d3d3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/LoginTextInputHintBG"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_confirmar_senha_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:padding="@dimen/LoginTextInputEditPaddingField"
                    android:textSize="@dimen/LoginTextInputEditSize">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:layout_width="@dimen/LoginWidthButton"
                    android:layout_height="@dimen/LoginHeightButton"
                    android:background="@drawable/button"
                    android:text="Cadastrar"
                    android:gravity="center"
                    android:textColor="@color/ButtonLogin"
                    android:textSize="@dimen/LoginTextSizeButton"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>